[metadata]
name = uas
version = 0.0.2
author = Mikko Hellsing
author_email = mikko@sumsum.se
license = MIT
description = Random User-Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sorl/uas
project_urls =
    Bug Tracker = https://github.com/sorl/uas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = uas
include_package_data = True
python_requires = >=3.6
